# ManageShape

./: CMakeLists.txt  data.txt
hdr/: Circle.hpp  Constant.hpp  Ellipse.hpp  Rectangle.hpp  Shape.hpp  ShapeFactory.hpp  Triangle.hpp
src/: Circle.cpp  Ellipse.cpp  Rectangle.cpp  ShapeFactory.cpp  Triangle.cpp  main.cpp
